fixed annoying overflow. base layout almost done. button in _selectreward is broke for no reason.

--- a/Crowdfunding-product-page/src/assets/stylesheets/index.css
+++ b/Crowdfunding-product-page/src/assets/stylesheets/index.css
@@ -16,7 +16,7 @@
 
 body {
   @apply bg-primaryBg
-  overflow-x-hidden;
+    overflow-x-hidden;
 }
 
 h2 {
@@ -27,9 +27,17 @@ p {
   @apply text-darkGray;
 }
 
+button {
+  @apply
+    w-full rounded-full bg-moderateCyan text-white
+    hover:bg-darkCyan transition-colors duration-200
+  ;
+}
+
 .box {
-  @apply 
-    w-full px-5 md:px-11 py-9
+
+  @apply
+    w-full px-5 sm:px-11 py-9
     flex flex-col items-center
     rounded-md border border-solid border-lightGray
     bg-white
